--- a/package.json
+++ b/package.json
@@ -15,23 +15,29 @@
   "dependencies": {
     "@tinymce/tinymce-react": "^6.3.0",
     "bcrypt": "^6.0.0",
+    "convert-excel-to-json": "^1.7.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "cross-env": "^10.0.0",
     "dotenv": "^17.2.1",
-    "express": "^4.21.2",
+    "express": "^4.22.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.0",
     "morgan": "^1.10.1",
-    "nodemailer": "^7.0.5"
+    "multer": "^2.0.2",
+    "nodemailer": "^7.0.5",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.3"
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
+    "@types/convert-excel-to-json": "^1.7.4",
     "@types/cookie-parser": "^1.4.9",
     "@types/cors": "^2.8.19",
-    "@types/express": "^5.0.3",
+    "@types/express": "^5.0.6",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/morgan": "^1.9.10",
+    "@types/multer": "^2.0.0",
     "@types/node": "^24.3.0",
     "@types/nodemailer": "^7.0.1"
   }
